# Cherenkov

./: .dockerignore.gitignore_global  .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  PHASE6_COMPLETION_SUMMARY.md  PLUME_INTEGRATION_SUMMARY.md  PROJECT_STATUS.md  README.md  SECURITY.md  TEST_REPORT.md  TODO.md  TODO_EXECUTION.md  TODO_FEATURES.md  TODO_FULL_TEST.md  TODO_INTEGRATION.md  TODO_INTEGRATION_ACTIVE.md  TODO_ML_IMPLEMENTATION.md  TODO_ML_IMPLEMENTATION_STATUS.md  TODO_ML_INTEGRATION.md  TODO_ML_INTEGRATION_FIX.md  TODO_ML_PHASE2.md  TODO_ONNX_FIX.md  TODO_ONNX_FIX_COMPLETE.md  TODO_ONNX_FIX_PROGRESS.md  TODO_PHASE1.md  TODO_PLUME_IMPLEMENTATION.md  TODO_PLUME_INTEGRATION.md  TODO_PLUME_INTEGRATION_ACTIVE.md  TODO_RUST.md  TODO_TESTING.md  TODO_TEST_FIXES.md  TODO_TRAINING_PIPELINE.md  config.yaml  (+3 more)
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml  release.yml
crates/cherenkov-api/: Cargo.toml  Dockerfile
crates/cherenkov-api/src/: auth.rs  lib.rs  main.rs  rate_limit.rs  rest.rs  websocket.rs
crates/cherenkov-api/src/auth/: mod.rs
crates/cherenkov-api/src/graphql/: mod.rs  model_management.rs  plume_integration_test.rs  plume_service.rs  resolvers.rs  schema.rs  subscription.rs
crates/cherenkov-core/: Cargo.toml
crates/cherenkov-core/src/: bus.rs  config.rs  events.rs  lib.rs
crates/cherenkov-db/: Cargo.toml
crates/cherenkov-db/migrations/: 001_initial_schema.sql
crates/cherenkov-db/src/: cache.rs  lib.rs  query.rs  schema.rs  scylla.rs  sqlite.rs  storage.rs
crates/cherenkov-ingest/: Cargo.toml  Dockerfile
crates/cherenkov-ingest/src/: lib.rs  main.rs  metrics.rs  normalizer.rs  pipeline.rs  sources.rs  sources_extra.rs
crates/cherenkov-ingest/src/sources/: epa_radnet.rs  mod.rs  nasa_firms.rs  noaa_gfs.rs  open_meteo.rs  openaq.rs  safecast.rs  uradmonitor.rs
crates/cherenkov-ml/: Cargo.toml
crates/cherenkov-ml/src/: conversion.rs  data_loader.rs  inference.rs  inference_test.rs  integration.rs  isotope.rs  lib.rs  model_registry.rs  onnx_export.rs  training.rs  training_test.rs
crates/cherenkov-ml/tests/: integration_tests.rs
crates/cherenkov-notify/: Cargo.toml
crates/cherenkov-notify/src/: email.rs  lib.rs  rate_limiter.rs  service.rs  sms.rs  telegram.rs  types.rs  webhook.rs
crates/cherenkov-observability/: Cargo.toml
crates/cherenkov-observability/src/: lib.rs  logging.rs  metrics.rs  tracing.rs
crates/cherenkov-plume/: Cargo.toml
crates/cherenkov-plume/src/: dispersion.rs  lib.rs  particle.rs  weather.rs
crates/cherenkov-stream/: Cargo.toml  Dockerfile
crates/cherenkov-stream/src/: anomaly.rs  correlation.rs  lib.rs  main.rs  processor.rs  window.rs
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SOURCES.md  DEPLOYMENT.md  SECURITY.md  TROUBLESHOOTING.md  USER_MANUAL.md
k8s/base/: api-deployment.yaml  configmap.yaml  ingest-deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets-template.yaml  stream-deployment.yaml  web-deployment.yaml
k8s/flux/: kustomization.yaml
k8s/monitoring/: grafana.yaml  jaeger.yaml  prometheus.yaml
k8s/overlays/production/: hpa.yaml  kustomization.yaml  pdb.yaml
k8s/overlays/staging/: kustomization.yaml
mobile/: App.tsx  app.json  package.json  tsconfig.json
mobile/src/hooks/: index.ts  useOfflineSync.ts  usePushNotifications.ts
mobile/src/services/: index.ts
mobile/src/stores/: authStore.ts  dataStore.ts  index.ts
mobile/src/types/: index.ts
mock-api/: package-lock.json  package.json  server.js
scripts/: deploy.sh  setup.sh
tests/: api_test.rs  integration_test.rs  websocket_test.rs
web/: .dockerignore  .env.example  .eslintrc.json  Dockerfile  LICENSE  README.md  TODO.md  TODO_OPTIMIZATION.md  TODO_TEST_FIXES.md  codegen.ts  index.html  integration_test_output.txt  next.config.js  next.config.production.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tailwind.config.ts  test-full-output.txt  test-output.txt  test_output.txt  test_results.txt  tsconfig.json  type-check-output.txt  vite.config.ts  vitest.config.ts
web/.next/: app-build-manifest.json  build-manifest.json  trace
web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  pages-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
web/.storybook/: main.ts  manager-head.html  preview-head.html  preview.ts  preview.tsx  theme.ts
web/e2e/: dashboard.spec.ts  globe.spec.ts  navigation.spec.ts  visual.spec.ts
web/playwright-report/: index.html
web/public/: manifest.json  robots.txt  service-worker.js  sitemap.xml
web/public/fonts/: .gitkeep
web/public/images/: .gitkeep
web/scripts/: build-analyze.ts  codegen.ts  deploy.ts  test-coverage.ts
web/src/: App.tsx  index.css  main.tsx
web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/components/: AlertPanel.tsx  ErrorBoundary.tsx  Header.tsx  KeyboardShortcuts.tsx  Layout.tsx  SensorChart.tsx  Sidebar.tsx  StatCard.tsx
web/src/config/: api-endpoints.ts  env.ts  features.ts  index.ts  routes.ts
web/src/graphql/: client.ts
web/src/hooks/: index.ts  use-debounce.ts  use-evacuation-zones.ts  use-globe.ts  use-graphql.test.ts  use-graphql.test.tsx  use-graphql.ts  use-intersection-observer.ts  use-keyboard-shortcuts.ts  use-local-storage.ts  use-media-query.ts  use-plume-particles.ts  use-plume-simulation.ts  use-previous.ts  use-throttle.ts  use-time-control.ts  use-websocket.ts  useAuth.ts  useMemoryLeakDetection.ts  useMockData.ts  useRafThrottle.test.ts  (+5 more)
web/tests/: setup.ts  utils.ts
web/wasm/: Cargo.toml
web/wasm/pkg/: cherenkov_web.d.ts  index.d.ts  index.js
web/wasm/src/: globe.rs  lib.rs  renderer.rs  utils.rs
web/wasm/src/shaders/: facility.frag  globe.frag  globe.vert  sensor.frag  sensor.vert
web/wasm/tests/: globe.test.ts
(+493 files in other folders)
