[package]
name = "cherenkov-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
scylla = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
tower = "0.4"
tower-http = { version = "0.6", features = ["cors", "compression-br", "compression-gzip", "compression-deflate"] }


# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"

# Rate limiting
governor = "0.6"
dashmap = "5.5"

# Streaming and async utilities
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
metrics = "0.22"

# Internal crates
cherenkov-core = { path = "../cherenkov-core" }
cherenkov-db = { path = "../cherenkov-db" }
cherenkov-observability = { path = "../cherenkov-observability" }
cherenkov-plume = { path = "../cherenkov-plume" }


[dev-dependencies]
tokio-test = { workspace = true }
