[package]
name = "cherenkov-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
scylla = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Database tiers
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono"] }
redis = { workspace = true }
deadpool = { version = "0.10", features = ["managed", "rt_tokio_1"] }
deadpool-redis = "0.14"

# Storage and serialization
aws-sdk-s3 = { version = "1.15", optional = true }
parquet = { version = "52.0", optional = true }
arrow = { version = "52.0", optional = true }

# Retry and backoff
backoff = { version = "0.4", features = ["tokio"] }

# Geospatial
geohash = "0.13"

# Connection pooling
bb8 = "0.8"

[features]
default = []
cold-storage = ["aws-sdk-s3", "parquet", "arrow"]


[dev-dependencies]
tokio-test = { workspace = true }
