[package]
name = "cherenkov-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
scylla = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }

# Internal crates
cherenkov-core = { path = "../cherenkov-core" }
cherenkov-db = { path = "../cherenkov-db" }
cherenkov-observability = { path = "../cherenkov-observability" }



# Circuit breaker and resilience
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"


# Deduplication
dashmap = "5.5"

# Serialization for DLQ
bincode = { workspace = true }

# UUID and regex
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }
regex = "1.10"

# HTML parsing for EPA RadNet
scraper = "0.19"

# Timezone handling
chrono-tz = "0.8"


[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }
