[package]
name = "cherenkov-ml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = "0.8"
prost = "0.12"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { workspace = true }
rand = "=0.8.5"

# Data loading and ONNX export
reqwest = { version = "0.11", features = ["stream", "json"] }
csv = "1.3"
bytes = "1.5"
url = "2.5"
tempfile = "3.9"

[dev-dependencies]
tokio-test = { workspace = true }
