[package]
name = "cherenkov-ml"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-onnx = "0.8"
prost = "0.12"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { workspace = true }
rand = "=0.8.5"

# Data loading and ONNX export
reqwest = { version = "0.11", features = ["stream", "json"] }
csv = "1.3"
bytes = "1.5"
url = "2.5"
tempfile = "3.9"

# Cloud storage and data formats
aws-sdk-s3 = { version = "1.0", optional = true }
aws-config = { version = "1.0", optional = true }
hdf5 = { version = "0.8", optional = true }
ndarray = { version = "0.15", optional = true }

# Caching for classification results
lru = "0.12"

# Workspace crates
cherenkov-core = { workspace = true }
cherenkov-stream = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
cloud-storage = ["aws-sdk-s3", "aws-config"]
hdf5-support = ["hdf5", "ndarray"]
full = ["cloud-storage", "hdf5-support"]
