[package]
name = "cherenkov-notify"
version = "0.1.0"
edition = "2021"
description = "Multi-channel notification system for Cherenkov"
license = "MIT"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for webhooks and APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Email (SMTP)
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Telegram Bot API
teloxide = { version = "0.12", features = ["macros"] }

# Rate limiting
governor = "0.6"
nonzero_ext = "0.3"

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Tracing
tracing = "0.1"

# Cherenkov internal
cherenkov-core = { path = "../cherenkov-core" }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
