[package]
name = "cherenkov-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
opentelemetry = "0.31"
opentelemetry-jaeger = "0.20"
opentelemetry_sdk = "0.21"
tracing-opentelemetry = "0.22"
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tokio-test = { workspace = true }
