[package]
name = "cherenkov-plume"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
nalgebra = "0.32"
nalgebra-sparse = "0.9"
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }
