[package]
name = "cherenkov-stream"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Internal crates
cherenkov-core = { path = "../cherenkov-core" }
cherenkov-db = { path = "../cherenkov-db" }
cherenkov-observability = { path = "../cherenkov-observability" }


# Async streaming
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Redis pub/sub
redis = { workspace = true }

# Statistical processing
statrs = "0.18"
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }

[lib]
name = "cherenkov_stream"
path = "src/lib.rs"

[[bin]]
name = "cherenkov-stream"
path = "src/main.rs"
