[package]
name = "cherenkov-web-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "console",
] }
js-sys = "0.3"
nalgebra = { version = "0.32", features = ["serde-serialize"] }
nalgebra-glm = "0.18"
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "WebGl2RenderingContext",
    "WebGlBuffer",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlFramebuffer",
    "HtmlCanvasElement",
    "Window",
    "Document",
    "Element",
    "console",
]

[profile.release]
opt-level = 3
lto = true
